Sample/dev/src/objects/Developer__c.object
<CustomObject>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Developer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Developers</relationshipLabel>
        <relationshipName>Developer_Name</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Type__c</fullName>
        <label>Developer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Developers</relationshipLabel>
        <relationshipName>Developers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Developers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Working_Hours__c</fullName>
        <label>Working Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Developer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSC-{000000}</displayFormat>
        <label>Developer Sprint Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>